opam-version: "2.0"
name: "arc"
synopsis: "ARC support in OCaml"
description: "ARC implementation in OCaml"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://git.robur.coop/robur/ocaml-arc"
doc: "https://robur-coop.github.io/ocaml-arc/"
bug-reports: "https://git.robur.coop/robur/ocaml-arc"
dev-repo: "git+https://github.com/robur-coop/ocaml-arc.git"
depends: [
  "ocaml" {>= "4.08.0"}
  "dmarc"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
pin-depends: [
  [ "uspf.dev" "git+https://github.com/mirage/uspf.git#8e829f5dd624d0c05f57e8970d98230ec049fb50" ]
  [ "dkim.dev" "git+https://github.com/mirage/ocaml-dkim.git#502db12d7328a23589c92f7f9e9814899120f87a" ]
  [ "dmarc.dev" "git+https://github.com/dinosaure/ocaml-dmarc.git#2994fc018a6e1cef374eaf9ed8cc3272744f97cd" ]
]
