opam-version: "2.0"
name: "arc"
synopsis: "ARC support in OCaml"
description: "ARC implementation in OCaml"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://git.robur.coop/robur/ocaml-arc"
doc: "https://robur-coop.github.io/ocaml-arc/"
bug-reports: "https://git.robur.coop/robur/ocaml-arc"
dev-repo: "git+https://github.com/robur-coop/ocaml-arc.git"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "dmarc"
  "alcotest" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
pin-depends: [
  [ "uspf.dev" "git+https://github.com/mirage/uspf.git#8e829f5dd624d0c05f57e8970d98230ec049fb50" ]
  [ "dkim.dev" "git+https://github.com/mirage/ocaml-dkim.git#4752aa45a3bfa21df0ab2cf0a2daa15552454d53" ]
  [ "dmarc.dev" "git+https://github.com/dinosaure/ocaml-dmarc.git#b3922bcd916701b225e71338f4208c4a37406623" ]
]
