opam-version: "2.0"
name: "arc"
synopsis: "ARC support in OCaml"
description: "ARC implementation in OCaml"
maintainer: "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors: "Romain Calascibetta <romain.calascibetta@gmail.com>"
license: "MIT"
homepage: "https://git.robur.coop/robur/ocaml-arc"
doc: "https://robur-coop.github.io/ocaml-arc/"
bug-reports: "https://git.robur.coop/robur/ocaml-arc"
dev-repo: "git+https://github.com/robur-coop/ocaml-arc.git"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "dmarc"
  "alcotest" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
x-maintenance-intent: [ "(latest)" ]
